# jupyter-protocol

./: .gitignore  .gitmodules  Cargo.toml  Readme.ipynb  Readme.md  Untitled.ipynb  package.json
.github/: dependabot.yml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
.run/: Test All.run.xml
projects/evcxr/: Cargo.toml
projects/evcxr/examples/: example_eval.rs
projects/evcxr/src/: cargo_metadata.rs  child_process.rs  code_block.rs  command_context.rs  crate_config.rs  errors.rs  eval_context.rs  lib.rs  module.rs  runtime.rs  rust_analyzer.rs  statement_splitter.rs  use_trees.rs
projects/evcxr/tests/: integration_tests.rs
projects/jupyter/: Cargo.toml  readme.md
projects/jupyter-calculator/: Cargo.toml  package.json  readme.md
projects/jupyter-calculator/src/: lib.rs  main.rs
projects/jupyter-calculator/src/engine/: mod.rs  readme.md
projects/jupyter-calculator/src/values/: mod.rs
projects/jupyter-calculator/tests/: main.rs
projects/jupyter-derive/: Cargo.toml  readme.md
projects/jupyter-derive/src/: lib.rs
projects/jupyter-derive/src/image_provider/: mod.rs
projects/jupyter-rhai/: Cargo.toml
projects/jupyter-rhai/src/: main.rs
projects/jupyter-types/: Cargo.toml
projects/jupyter-types/src/: lib.rs
projects/jupyter-types/src/values/: mod.rs
projects/jupyter-types/tests/: main.rs
projects/jupyter/examples/: comm_info.rs  completion.rs  heartbeat.rs  history.rs  inspect.rs  iopub_subscribe.rs  kernel_info.rs  run_code.rs  shutdown.rs
projects/jupyter/src/: client.rs  commands.rs  connection.rs  connection_config.rs  control_file.rs  core.rs  errors.rs  header.rs  install.rs  jupyter_message.rs  legacy_install.rs  lib.rs  main.rs  metadata.rs  paths.rs  responses.rs  signatures.rs  socket.rs  test_helpers.rs  wire.rs
projects/jupyter/src/client/: good.json  mod.rs
projects/jupyter/src/commands/: install.rs  mod.rs  open_jupyter.rs  start.rs  uninstall.rs
projects/jupyter/src/errors/: mod.rs
projects/jupyter/src/executor/: execution_reply.rs  mod.rs  sockets.rs  value_type.rs
projects/jupyter/src/helper/: mod.rs  readme.md
projects/jupyter/src/jupyter_message/: common_info.rs  debug_info.rs  der.rs  execute.rs  kernel_info.rs  message_type.rs  mod.rs  ser.rs  shutdown.rs
projects/jupyter/src/value_type/: execute.rs  for_image.rs  for_ndarray.rs  inspects.rs  mod.rs  readme.md
projects/jupyter/src/value_type/inspects/: der.rs  mod.rs
projects/serde-lsp/: Cargo.toml
projects/serde-lsp/src/: lib.rs
projects/serde-lsp/src/dap/: mod.rs  request.rs  response.rs  variables_arguments.rs
projects/serde-lsp/tests/: main.rs
