[package]
name = "evcxr"
version = "0.14.2"
license = "MIT OR Apache-2.0"
description = "An Evaluation Context for Rust"
repository = "https://github.com/evcxr/evcxr"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2021"
rust-version = "1.65"

[dependencies]
tempfile = "3.1.0"
libc = "0.2.80"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
regex = { version = "1.3.1", default-features = false, features = [ "std", "unicode-perl" ] }
once_cell = "1.5.2"
libloading = "0.8.0"
dirs = "5.0.1"
which = "4.0.2"
evcxr_input = "1.0.0"
unicode-segmentation = "1.7.1"
crossbeam-channel = "0.5.5"
toml = { version = "0.7.3", default-features = false, features = [ "parse" ] }

# Rust-analyzer depends on pre-release versions of salsa which make breaking changes without a
# semver bump. So we pin salsa to an exact version and update as needed together with the ra_ap_*
# packages.
salsa = "=0.17.0-pre.2"
ariadne = "0.2.0"

[target.'cfg(all(unix, not(target_os = "freebsd")))'.dependencies]
backtrace = "0.3.35"
sig = "1.0.0"

[target.'cfg(target_os = "macos")'.dependencies]
filetime = "0.2.13"
