[package]
name = "calculator"
publish = false
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Jupyter Kernel Protocol in Rust"
repository = "https://github.com/oovm/jupyter-protocol"
readme = "README.md"
authors = ["The Evcxr Authors"]
edition = "2021"
exclude = []

[dependencies]
num = "0.4.1"
toml = "0.7.7"
clap = "4.4.2"
clap_derive = "4.4.2"
mathml-core = "0.1.6"
mathml-latex = "0.0.3"
svg = "0.13.1"
tracing-subscriber = "0.3.17"
image = "0.24.7"
base64 = "0.21.3"

[dependencies.jupyter]
version = "*"
path = "../jupyter"
features = ["url", "image", "mathml-core", "svg"]

[dependencies.jupyter-derive]
version = "*"
path = "../jupyter-derive"
