[package]
name = "calculator"
publish = false
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "Jupyter Kernel Protocol in Rust"
repository = "https://github.com/oovm/jupyter-protocol"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

[dependencies]
num = "0.4.1"
toml = "0.8.8"
clap = "4.4.7"
clap_derive = "4.4.7"
mathml-core = "0.1.6"
mathml-latex = "0.0.3"
svg = "0.15.1"
tracing-subscriber = "0.3.18"
image = "0.24.8"
base64 = "0.21.7"

[dependencies.jupyter]
version = "*"
path = "../jupyter"
features = ["url", "image", "mathml", "svg", "ndarray"]

[dependencies.jupyter-derive]
version = "*"
path = "../jupyter-derive"
