[package]
name = "jupyter-derive"
version = "0.0.2"
license = "MIT OR Apache-2.0"
description = "Jupyter Kernel Protocol in Rust"
homepage = "https://github.com/oovm/jupyter-protocol/tree/dev/projects/jupyter-calculator"
repository = "https://github.com/oovm/jupyter-protocol"
documentation = "https://docs.rs/jupyter-derive"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

# proc-macro crate
[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0.78" }
syn = "2.0.49"
quote = "1.0.35"
image = "0.25.0"
