[package]
name = "jupyter-types"
version = "0.0.0"
license = "MPL-2.0"
description = "Shared types for jupyter kernel"
repository = "https://github.com/oovm/jupyter-protocol"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

[dependencies]
serde_json = "1.0.108"
#num = "0.4.1"
#toml = "0.8.8"
#clap = "4.4.7"
#clap_derive = "4.4.7"
#mathml-core = "0.1.6"
#mathml-latex = "0.0.3"
#svg = "0.14.0"
#tracing-subscriber = "0.3.17"
#image = "0.24.7"
#base64 = "0.21.5"
