[package]
name = "jupyter-types"
version = "0.0.0"
license = "MPL-2.0"
description = "Shared types for jupyter kernel"
repository = "https://github.com/oovm/jupyter-protocol"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

[dependencies]
serde_json = "1.0.108"
url = { version = "2.4.1", optional = true }
ndarray = { version = "0.15.6", optional = true }
mathml-core = { version = "0.1.6", optional = true }
mathml-latex = { version = "0.0.3", optional = true }
svg = { version = "0.14.0", optional = true }
base64 = { version = "0.21.5", optional = true }
image = { version = "0.24.7", optional = true, default-features = false, features = ["png"] }


[features]
image = ["dep:image", "base64"]

[package.metadata.docs.rs]
all-features = true