[package]
name = "jupyter-types"
version = "0.0.2"
license = "MPL-2.0"
description = "Shared types for jupyter kernel"
repository = "https://github.com/oovm/jupyter-protocol"
documentation = "https://docs.rs/jupyter-types"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

[dependencies]
serde_json = "1.0.113"
url = { version = "2.5.0", optional = true }
ndarray = { version = "0.15.6", optional = true }
mathml-core = { version = "0.1.7", optional = true }
mathml-latex = { version = "0.0.3", optional = true }
svg = { version = "0.16.0", optional = true }
base64 = { version = "0.22.0", optional = true }
image = { version = "0.25.0", optional = true, default-features = false, features = ["png"] }


[features]
image = ["dep:image", "base64"]

[package.metadata.docs.rs]
all-features = true