[package]
name = "jupyter"
version = "0.2.1"
license = "MIT OR Apache-2.0"
description = "Jupyter Kernel Protocol in Rust"
homepage = "https://github.com/oovm/jupyter-protocol/tree/dev/projects/jupyter-calculator"
repository = "https://github.com/oovm/jupyter-protocol"
documentation = "https://docs.rs/jupyter"
keywords = ["jupyter", "kernel", "protocol"]
categories = ["science"]
readme = "readme.md"
authors = ["The Evcxr Authors"]
edition = "2021"
exclude = ["third_party/.ipynb_checkpoints/"]

[dependencies]
clap = "4.5.1"
clap_derive = "4.5.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
bytes = "1.5.0"
tokio = "1.36.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
hmac = "0.12.1"
sha2 = "0.10.8"
hex = "0.4.3"
dirs = "5.0.1"
chrono = { version = "0.4.34", features = ["serde"] }
unicode-segmentation = "1.11.0"
generic-array = "0.14.7"
crossbeam-channel = "0.5.11"
zeromq = { version = "0.3.5", default-features = false, features = ["tokio-runtime", "tcp-transport"] }
#syntax-error = "0.0.4"
tracing = "0.1.40"
# renderers support
#mathml-core = { version = "0.1.7", optional = true }

[dependencies.jupyter-types]
version = "0.0.*"
path = "../jupyter-types"

[dependencies.serde-lsp]
version = "0.0.1"
path = "../serde-lsp"

[features]
default = []
image = ["jupyter-types/image"]
svg = ["jupyter-types/svg"]
ndarray = ["jupyter-types/ndarray"]
url = ["jupyter-types/url"]
mathml = ["jupyter-types/mathml-core"]

[package.metadata.docs.rs]
all-features = true
