[package]
name = "serde-lsp"
version = "0.0.1"
license = "MIT OR Apache-2.0"
description = "Language Server Protocol via serde"
homepage = "https://github.com/oovm/jupyter-protocol/tree/dev/projects/jupyter-calculator"
repository = "https://github.com/oovm/jupyter-protocol"
documentation = "https://docs.rs/jupyter-derive"
readme = "readme.md"
authors = ["Aster <192607617@qq.com>"]
edition = "2021"
exclude = []

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
